# bankaccount-api

./: Cargo.toml
src/: app_context.rs  main.rs
src/domain/: banking_service_impl.rs  mod.rs
src/domain/api/: banking_service.rs  mod.rs
src/domain/model/: account.rs  client.rs  mod.rs  operation.rs
src/domain/spi/: db_repository.rs
src/repository/: db_repository_impl.rs  mod.rs
